k8s/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  selector:
    app: portainer
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
